Fix merge artifacts