@@ -11,7 +11,6 @@ import au.com.mineauz.minigames.script.ScriptCollection;
 import au.com.mineauz.minigames.script.ScriptObject;
 import au.com.mineauz.minigames.script.ScriptReference;
 import au.com.mineauz.minigames.script.ScriptValue;
-import com.google.common.collect.ImmutableSet;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.format.NamedTextColor;
 import org.apache.commons.text.WordUtils;
@@ -407,7 +406,7 @@ public class Team implements ScriptObject {
 
     @Override
     public Set<String> getKeys() {
-        return ImmutableSet.of("colorname", "color", "name", "score", "players", "minigame");
+        return Set.of("colorname", "color", "name", "score", "players", "minigame");
     }
 
     @Override
